@@ -32,14 +32,8 @@
 /*!
  Kernel boot args global also used by booter for its own data.
  */
-extern boot_args_common *bootArgs;
-
-/*!
- Boot args passed to the kernel.
- */
-extern boot_args_Legacy  *bootArgsLegacy;
-extern boot_args_107	 *bootArgs107;
-extern boot_args_108	 *bootArgs108;
+extern boot_args_legacy *bootArgsLegacy;
+extern boot_args        *bootArgs;
 
 #define VGA_TEXT_MODE 0
 
